--- a/views/set_name.erb
+++ b/views/set_name.erb
@@ -1,6 +1,6 @@
 <h4>Set Player Name</h4>
 
-<form action="/set_name" method="post">
+<form action="/new_player" method="post">
   Name: <input type="text" name="player_name"/>
   <br />
   <input type="submit" class="btn" />
