--- a/views/game.erb
+++ b/views/game.erb
@@ -2,10 +2,11 @@
 
 <div class="well">
   <h5>Dealer cards</h5>
-    <%= '<img src=' + cover_card + ' alt="" />' %>
   <% session[:dealer_hand].each_with_index do |card, idx| %>
-    <% if idx != 0 %>
-      <%= '<img src=' + show_card(card) + ' alt="" />' %>
+    <% if (!@show_dealer_card) && (idx == 0) %>
+      <%= '<img class="image-card" src=' + cover_card + ' /> ' %>
+    <% else %>
+      <%= '<img class="image-card" src=' + show_card(card) + ' />' %>
     <% end %>
   <% end %>
 </div>
@@ -13,23 +14,17 @@
 <div class="well">
   <h5>Your cards</h5>
   <% session[:player_hand].each do |card| %>
-    <%= '<img src=' + show_card(card) + ' alt="" />' %>
+    <%= '<img class="image-card" src=' + show_card(card) + ' />' %>
   <% end %>
 </div>
 
-
-<p>Your total is: <%= @player_points %>.</p>
-
-<% if @text_for_player_over_21 != nil %>
-  <div class="alert alert-error"><%= @text_for_player_over_21 %></p>
-<% elsif @text_for_player_21 != nil %>
-  <div class="alert alert-success"><%= @text_for_player_21 %></p>
-<% else %>
+<% if @show_hit_or_stay_buttons %>
+  <p>Your total is: <%= @player_points %>.</p>
   <p>What would you like to do?</p>
-  <form action="/player/hit" method="post">
-    <button type="submit" class="btn">Hit</button>
+  <form id="hit-form" action="/player_hits" method="post">
+    <button type="submit" class="btn btn-success">Hit</button>
   </form>
-  <form action='/player/stay' method="post">
-    <button type="submit" class="btn">Stay</button>
+  <form id="stay-form" action='/dealer_turn' method="post">
+    <button type="submit" class="btn btn-warning">Stay</button>
   </form>
 <% end %>
