Refactor win lose messages

--- a/public/application.css
+++ b/public/application.css
@@ -1,6 +1,10 @@
-form#hit-form, form#stay-form {
+.left-button {
   float: left;
-  padding-right: 10px;
+  margin-right: 10px;
+}
+
+.right-button {
+  float: left;
 }
 
 img.image-card {
