--- a/views/make_bet.erb
+++ b/views/make_bet.erb
@@ -1,7 +1,7 @@
 <h3>Make a bet for this round.</h3>
 <p><%= session[:player_name] + " has $" + session[:player_money].to_s %></p>
 <form action="/make_bet" method="post">
-  <input type="text" name="bet_amount" />
+  <input type="text" name="player_bet" />
   <br />
   <input type="submit" class="btn">
 </form>
