Add well to end game template

--- a/views/end_game.erb
+++ b/views/end_game.erb
@@ -1,1 +1,1 @@
-<p>You leave the game with $<%= @player_money %>.</p>
+<div class="well">Bye bye, <%= @player_name %>! You leave the game with $<%= @player_money %>.</divß>
